add knn and naive bayes using scikit-learn
This commit was created by Deepnote. Project url: https://deepnote.com/project/0cf4af83-b6f2-43d0-9e47-37804035f63d

--- a/deepnote/Kandida_Gunawan’s_Untitled_project/Tubes_2.ipynb
+++ b/deepnote/Kandida_Gunawan’s_Untitled_project/Tubes_2.ipynb
@@ -72,17 +72,17 @@
     },
     {
       "cell_type": "code",
-      "source": "import pandas as pd",
+      "source": "import pandas as pd\nimport numpy as np\n\n#scikit-learn\nfrom sklearn.neighbors import KNeighborsClassifier\nfrom sklearn.naive_bayes import GaussianNB\nfrom sklearn.metrics import accuracy_score\nfrom sklearn.metrics import accuracy_score",
       "metadata": {
-        "source_hash": "9b82ee11",
-        "execution_start": 1700745183509,
-        "execution_millis": 11,
+        "source_hash": "4ac85d36",
+        "execution_start": 1700748288147,
+        "execution_millis": 57,
         "deepnote_to_be_reexecuted": false,
         "cell_id": "0115421869764aa68505490fe9189b62",
         "deepnote_cell_type": "code"
       },
       "outputs": [],
-      "execution_count": 2,
+      "execution_count": 57,
       "block_group": "78b098c9db854ad680c8ffc6e1a915eb"
     },
     {
@@ -49509,6 +49509,16 @@
       "block_group": "6ca6583c4a244f84adb40bcf72e57ea3"
     },
     {
+      "cell_type": "markdown",
+      "source": "## DATA CLEANING",
+      "metadata": {
+        "formattedRanges": [],
+        "cell_id": "d27df0a354834944a402f5854290319b",
+        "deepnote_cell_type": "text-cell-h2"
+      },
+      "block_group": "2186e18c36964166b6845deeadb669bc"
+    },
+    {
       "cell_type": "code",
       "source": "",
       "metadata": {
@@ -49518,6 +49528,120 @@
       "outputs": [],
       "execution_count": null,
       "block_group": "8828327e88d0449ab5d2be534312e761"
+    },
+    {
+      "cell_type": "markdown",
+      "source": "## KNN ALGORITHM ",
+      "metadata": {
+        "formattedRanges": [],
+        "cell_id": "9abda452285b41b7b3084490a462fcc6",
+        "deepnote_cell_type": "text-cell-h2"
+      },
+      "block_group": "25b87e5be506482eb6c30d6019a8e311"
+    },
+    {
+      "cell_type": "code",
+      "source": "",
+      "metadata": {
+        "cell_id": "c2eb7700ccdd4ac4b2392d86da246735",
+        "deepnote_cell_type": "code"
+      },
+      "outputs": [],
+      "execution_count": null,
+      "block_group": "2e9943d87ad8435b94a9aeb5db1a31e9"
+    },
+    {
+      "cell_type": "markdown",
+      "source": "## NAIVE BAYES ALGORITHM",
+      "metadata": {
+        "formattedRanges": [],
+        "cell_id": "1ce697614c474d26b8f3a018518e1e8d",
+        "deepnote_cell_type": "text-cell-h2"
+      },
+      "block_group": "836c811c2cf2420ebb1b9ce2c0d664f1"
+    },
+    {
+      "cell_type": "code",
+      "source": "",
+      "metadata": {
+        "cell_id": "c474a03cf33647d0b4a00076546c9ddd",
+        "deepnote_cell_type": "code"
+      },
+      "outputs": [],
+      "execution_count": null,
+      "block_group": "36710aa030a64b83bc30a7720be9db80"
+    },
+    {
+      "cell_type": "markdown",
+      "source": "## KNN AND NAIVE BAYES USING SCIKIT-LEARN",
+      "metadata": {
+        "formattedRanges": [],
+        "cell_id": "1a250d5163204e3090167ab94f12719c",
+        "deepnote_cell_type": "text-cell-h2"
+      },
+      "block_group": "9d77e1392ae9426a82bbee17be12370e"
+    },
+    {
+      "cell_type": "markdown",
+      "source": "### KNN USING SCIKIT-LEARN",
+      "metadata": {
+        "formattedRanges": [],
+        "cell_id": "2e3ddf0eff3347a7beb6df6e5d8e1dd1",
+        "deepnote_cell_type": "text-cell-h3"
+      },
+      "block_group": "33f7bfcd6af34fe1a833c40d76cdcb93"
+    },
+    {
+      "cell_type": "code",
+      "source": "y = data_train['price_range']\nX = data_train.drop('price_range', axis = 1)\nknnModel = KNeighborsClassifier(n_neighbors = 1)\nknnModel.fit(X, y)\n\ny_true_test = data_validation['price_range']\nX_test = data_validation.drop('price_range', axis = 1)\ny_pred_test = knnModel.predict(X_test)\naccuracy_score1 = accuracy_score(y_true_test, y_pred_test)\nprint(f'Accuracy Score of KNN Algorithm : {accuracy_score1}')\n",
+      "metadata": {
+        "source_hash": "924d3f3a",
+        "execution_start": 1700748136682,
+        "execution_millis": 317,
+        "deepnote_to_be_reexecuted": false,
+        "cell_id": "af43f8aac25141e4a3401a57a293f3c2",
+        "deepnote_cell_type": "code"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "text": "Accuracy Score of KNN Algorithm : 0.9183333333333333\n",
+          "output_type": "stream"
+        }
+      ],
+      "execution_count": 55,
+      "block_group": "d706f2ef314d486bb99229e3c999852a"
+    },
+    {
+      "cell_type": "markdown",
+      "source": "### NAIVE BAYES USING SCIKIT-LEARN",
+      "metadata": {
+        "formattedRanges": [],
+        "cell_id": "192623d1915f4687910b2383b0b948fa",
+        "deepnote_cell_type": "text-cell-h3"
+      },
+      "block_group": "073c402030c146cc8c983326c965aabe"
+    },
+    {
+      "cell_type": "code",
+      "source": "y = data_train['price_range']\nX = data_train.drop('price_range', axis = 1)\nnaiveBayesModel = GaussianNB()\nnaiveBayesModel.fit(X, y)\n\ny_true_test = data_validation['price_range']\nX_test = data_validation.drop('price_range', axis = 1)\ny_pred_test = naiveBayesModel.predict(X_test)\naccuracy_score2 = accuracy_score(y_true_test, y_pred_test)\nprint(f'Accuracy Score of Naive Bayes Algorithm : {accuracy_score2}')",
+      "metadata": {
+        "source_hash": "e4249b5f",
+        "execution_start": 1700748221399,
+        "execution_millis": 51,
+        "deepnote_to_be_reexecuted": false,
+        "cell_id": "3b66fc471b494d7b825359e44a250f4a",
+        "deepnote_cell_type": "code"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "text": "Accuracy Score of Naive Bayes Algorithm : 0.7816666666666666\n",
+          "output_type": "stream"
+        }
+      ],
+      "execution_count": 56,
+      "block_group": "78eef381d3264e768223e856fd9184d0"
     },
     {
       "cell_type": "markdown",
