--- a/deepnote/Kandida_Gunawan’s_Untitled_project/MULTINOMIAL NAIVE BAYES .ipynb
+++ b/deepnote/Kandida_Gunawan’s_Untitled_project/MULTINOMIAL NAIVE BAYES .ipynb
@@ -24,15 +24,15 @@
       "cell_type": "code",
       "source": "import pandas as pd\nimport numpy as np\nimport pickle\n\n#scikit-learn\nfrom sklearn.neighbors import KNeighborsClassifier\nfrom sklearn.naive_bayes import GaussianNB\nfrom sklearn.naive_bayes import MultinomialNB\nfrom sklearn.metrics import accuracy_score, precision_score, recall_score, classification_report",
       "metadata": {
-        "source_hash": null,
-        "execution_start": 1701258763933,
-        "execution_millis": 71,
+        "source_hash": "87111ff1",
+        "execution_start": 1701268951659,
+        "execution_millis": 1209,
         "deepnote_to_be_reexecuted": false,
         "cell_id": "3cb1d606f1ce4eb9b28a00a621fd42a9",
         "deepnote_cell_type": "code"
       },
       "outputs": [],
-      "execution_count": null,
+      "execution_count": 1,
       "block_group": "3cb1d606f1ce4eb9b28a00a621fd42a9"
     },
     {
@@ -49,15 +49,15 @@
       "cell_type": "code",
       "source": "data_train = pd.read_csv(\"Tubes2_AI/data/data_train.csv\")\ndata_validation = pd.read_csv(\"Tubes2_AI/data/data_validation.csv\")\ndata_test= pd.read_csv(\"Tubes2_AI/data/test.csv\")",
       "metadata": {
-        "source_hash": null,
-        "execution_start": 1701258766315,
-        "execution_millis": 524,
+        "source_hash": "b3b34217",
+        "execution_start": 1701268952873,
+        "execution_millis": 485,
         "deepnote_to_be_reexecuted": false,
         "cell_id": "569eacaa159f4f5384cce70422535fc8",
         "deepnote_cell_type": "code"
       },
       "outputs": [],
-      "execution_count": null,
+      "execution_count": 2,
       "block_group": "660468abe48d4cd7bed40920fbcbf856"
     },
     {
@@ -74,9 +74,9 @@
       "cell_type": "code",
       "source": "class Category:\n    def __init__(self, _attribute_name, _category_value, _data_train, _non_numerical_columns):  \n        self.attribute_name = _attribute_name\n        self.category_value = _category_value\n        self.data_train = _data_train\n        self.prob_category_value_0 = 0\n        self.prob_category_value_1 = 0\n        self.prob_category_value_2 = 0\n        self.prob_category_value_3 = 0\n        self.non_numerical_columns = []\n        self.lower_bound = 0\n        self.upper_bound = 0\n\n        if self.attribute_name not in _non_numerical_columns:\n            self.lower_bound = float(self.category_value.split(\" to \")[0])\n            self.upper_bound = float(self.category_value.split(\" to \")[1])\n        else: \n            self.lower_bound = self.category_value\n            self.upper_bound = self.category_value\n        \n    def num_of_category_value(self):\n        return len(self.data_train[self.data_train[self.attribute_name] == self.category_value])\n    \n    def num_of_x_category_value(self, x):\n        return len(self.data_train[(self.data_train[self.attribute_name] == self.category_value) & (self.data_train['price_range'] == x)])\n    \n    def update_category(self, total_count_0, total_count_1, total_count_2, total_count_3):\n        self.prob_category_value_0 = self.num_of_x_category_value(0) / total_count_0\n        self.prob_category_value_1 = self.num_of_x_category_value(1) / total_count_1\n        self.prob_category_value_2 = self.num_of_x_category_value(2) / total_count_2\n        self.prob_category_value_3 = self.num_of_x_category_value(3) / total_count_3\n\n\nclass Attribute:\n    def __init__(self, _attribute_name):\n        self.attribute_name = _attribute_name\n        self.category_value_list = []\n        \n    def add_category(self, c):\n        self.category_value_list.append(c)\n    \n        \n    def find_category(self, _category_value):\n        for c in self.category_value_list:\n            if float(c.lower_bound) <= _category_value <= float(c.upper_bound):\n                return c\n\nclass NaiveBayes:\n    def __init__(self):\n        self.attribute_arr = []\n    def add_attribute(self, a):\n        self.attribute_arr.append(a)\n    def convert_df(self, data_train):\n        non_numerical_columns = []\n        for col in data_train.columns:\n            if len(data_train[col].unique()) <= 4 or col == \"id\":\n                non_numerical_columns.append(col)\n        dummy_df = data_train.copy()  # Make a copy to avoid modifying the original DataFrame\n\n        for col in dummy_df.columns:\n            if col not in non_numerical_columns:\n                iqr = np.percentile(data_train[col], 75) - np.percentile(data_train[col], 25)\n                num_bins = 4\n                hist, bin_edges = np.histogram(data_train[col], bins=num_bins)\n                bin_labels = [f'Bin_{i+1}' for i in range(len(bin_edges)-1)]\n                for i in range(len(bin_edges) - 1):\n                    mask = (data_train[col] >= bin_edges[i]) & (data_train[col] <= bin_edges[i + 1])\n                    dummy_df.loc[mask, col] = (str(bin_edges[i]) + \" to \" + str(bin_edges[i+1]))\n\n        return dummy_df    \n    def find_attribute(self, _attribute_name):\n        for a in self.attribute_arr:\n            if a.attribute_name == _attribute_name:\n                return a\n                \n    def fit(self, X, y):\n        total_count_0 = len(y[y == 0])\n        total_count_1 = len(y[y == 1])\n        total_count_2 = len(y[y == 2])\n        total_count_3 = len(y[y == 3])\n        non_numerical_columns = []\n        for col in X.columns:\n            if (len(X[col].unique())) <= 4:\n                non_numerical_columns.append(col)\n\n        X = self.convert_df(X)\n        for col in X.columns:\n            new_attribute = Attribute(_attribute_name=col)\n            self.add_attribute(new_attribute)\n            min_val = np.inf\n            max_val = -np.inf\n            for val in X[col].unique():\n                if col not in non_numerical_columns:\n                    temp = val.split(\" to \")[0]\n                    if float(temp) < min_val:\n                        min_val = float(temp)\n                    temp = val.split(\" to \")[1]\n                    if float(temp) > max_val:\n                        max_val = float(temp)\n                new_category = Category(_attribute_name=col, _category_value=val, _data_train=pd.concat([X, y], axis=1), _non_numerical_columns= non_numerical_columns)\n                new_category.update_category(total_count_0, total_count_1, total_count_2, total_count_3)\n                new_attribute.add_category(new_category)\n            val = str(-999999) + \" to \" + str(min_val)\n            new_category = Category(_attribute_name=col, _category_value=val, _data_train=pd.concat([X, y], axis=1), _non_numerical_columns= non_numerical_columns)\n            new_category.update_category(total_count_0, total_count_1, total_count_2, total_count_3)\n            new_attribute.add_category(new_category)\n            val = str(max_val) + \" to \" + str(999999)\n            new_category = Category(_attribute_name=col, _category_value=val, _data_train=pd.concat([X, y], axis=1), _non_numerical_columns= non_numerical_columns)\n            new_category.update_category(total_count_0, total_count_1, total_count_2, total_count_3)\n            new_attribute.add_category(new_category)\n\n\n    \n    def predict(self, X_test_disc): \n        y_prediction = []\n        total_count_0 = len(y[y == 0])\n        total_count_1 = len(y[y == 1])\n        total_count_2 = len(y[y == 2])\n        total_count_3 = len(y[y == 3])\n        \n        for index, row in X_test_disc.iterrows():\n            p_0 = 1\n            p_1 = 1\n            p_2 = 1\n            p_3 = 1\n            for x in row.index:\n                _attribute_name = x\n                _category_value = row[x]\n                \n                attribute = self.find_attribute(_attribute_name)\n                category = attribute.find_category(float(_category_value))\n                p_0 *= category.prob_category_value_0\n                p_1 *= category.prob_category_value_1\n                p_2 *= category.prob_category_value_2\n                p_3 *= category.prob_category_value_3\n            total = total_count_0 + total_count_1 + total_count_2 + total_count_3\n            p_0 *= (total_count_0 / total)\n            p_1 *= (total_count_1 / total)\n            p_2 *= (total_count_2 / total)\n            p_3 *= (total_count_3 / total)\n\n            if p_0 >= p_1 and p_0 >= p_2 and p_0 >= p_3:\n                y_prediction.append(0)\n            elif p_1 >= p_0 and p_1 >= p_2 and p_1 >= p_3:\n                y_prediction.append(1)\n            elif p_2 >= p_1 and p_2 >= p_0 and p_2 >= p_3:\n                y_prediction.append(2)\n            else:\n                y_prediction.append(3)\n        \n        return y_prediction\n\n# Usage\ny = data_train['price_range']\n# data_train['processor_performance'] = data_train['n_cores'] * data_train['clock_speed']\nnb = NaiveBayes()\nnb.fit(data_train.drop('price_range', axis = 1), y)\n# data_validation['processor_performance'] = data_validation['n_cores'] * data_validation['clock_speed']\nX_test = data_validation.drop('price_range', axis = 1)\ny_pred = nb.predict(X_test)\ny_true_test = data_validation['price_range'] \nprecision_score_naive = precision_score(y_true_test, y_pred, average='macro')\nrecall_score_naive = recall_score(y_true_test, y_pred, average='macro')\nprint(f\"Accuracy score: {accuracy_score(y_true_test, y_pred)}\")\nprint(f\"Precision score: {precision_score_naive}\")\nprint(f\"Recall score: {recall_score_naive}\")\n\n",
       "metadata": {
-        "source_hash": null,
-        "execution_start": 1701258776059,
-        "execution_millis": 550,
+        "source_hash": "7fe1cf",
+        "execution_start": 1701268953371,
+        "execution_millis": 1277,
         "deepnote_to_be_reexecuted": false,
         "cell_id": "827367a7cb0647a191ccf22a07e451c8",
         "deepnote_cell_type": "code"
@@ -88,8 +88,89 @@
           "output_type": "stream"
         }
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "block_group": "1790e4aafe6e47e4ad47945ee3d7e5b5"
+    },
+    {
+      "cell_type": "markdown",
+      "source": "## MULTINOMIAL NAIVE BAYES SCIKIT-LEARN",
+      "metadata": {
+        "formattedRanges": [],
+        "cell_id": "8f5d62d3385a428f9e51b3c9ea7ba45e",
+        "deepnote_cell_type": "text-cell-h2"
+      },
+      "block_group": "6e14b4a3b269464ca2cb96b8036cc2a9"
+    },
+    {
+      "cell_type": "code",
+      "source": "y = data_train['price_range']\nX = data_train.drop('price_range', axis = 1)\nMultinomialNaiveBayesModel = MultinomialNB()\nMultinomialNaiveBayesModel.fit(X, y)\n\ny_true_test = data_validation['price_range']\nX_test = data_validation.drop('price_range', axis = 1)\ny_pred_test = MultinomialNaiveBayesModel.predict(X_test)\naccuracy_score_3 = accuracy_score(y_true_test, y_pred_test)\nprecision_score_3 = precision_score(y_true_test, y_pred_test, average='macro')\nrecall_score_3 = recall_score(y_true_test, y_pred_test, average='macro')\n\nprint(f'Accuracy Score of Multinomial Naive Bayes Algorithm : {accuracy_score_3}')\nprint(f'Precision Score of Multinomial Naive Bayes Algorithm : {precision_score_3}')\nprint(f'Recall Score of Multinomial Naive Bayes Algorithm : {recall_score_3}')",
+      "metadata": {
+        "source_hash": "f0fe59fc",
+        "execution_start": 1701268954669,
+        "execution_millis": 18,
+        "deepnote_to_be_reexecuted": false,
+        "cell_id": "76b1ac8e7c1e4f8b898bafa04743c353",
+        "deepnote_cell_type": "code"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "text": "Accuracy Score of Multinomial Naive Bayes Algorithm : 0.5316666666666666\nPrecision Score of Multinomial Naive Bayes Algorithm : 0.5194204225246274\nRecall Score of Multinomial Naive Bayes Algorithm : 0.5323794448063915\n",
+          "output_type": "stream"
+        }
+      ],
+      "execution_count": 4,
+      "block_group": "b07949f749be458d8a9eb1aa853d9e98"
+    },
+    {
+      "cell_type": "markdown",
+      "source": "## EXPORT MODEL",
+      "metadata": {
+        "formattedRanges": [],
+        "cell_id": "a4b1672d5f424c03b12c79545eeeb615",
+        "deepnote_cell_type": "text-cell-h2"
+      },
+      "block_group": "061bc9714b4947e784bec97e7378e109"
+    },
+    {
+      "cell_type": "code",
+      "source": "with open('Tubes2_AI/model-naive-bayes-1.pkl', 'wb') as file:\n    pickle.dump(nb, file)",
+      "metadata": {
+        "source_hash": "f3124922",
+        "execution_start": 1701268954711,
+        "execution_millis": 657,
+        "deepnote_to_be_reexecuted": false,
+        "cell_id": "901325cd39db42a1811cfc017de5594a",
+        "deepnote_cell_type": "code"
+      },
+      "outputs": [],
+      "execution_count": 5,
+      "block_group": "a37a3933ec42492f9eea7f7546cdecd1"
+    },
+    {
+      "cell_type": "markdown",
+      "source": "## READ MODEL",
+      "metadata": {
+        "formattedRanges": [],
+        "cell_id": "40ff16d391164c4aa573ec65cb86758e",
+        "deepnote_cell_type": "text-cell-h2"
+      },
+      "block_group": "eaaa1649a4854c3aafb786b5bbd9e68a"
+    },
+    {
+      "cell_type": "code",
+      "source": "with open('Tubes2_AI/model-naive-bayes-1.pkl', 'rb') as file:\n    loaded_model = pickle.load(file)",
+      "metadata": {
+        "source_hash": "947a111b",
+        "execution_start": 1701268955372,
+        "execution_millis": 216,
+        "deepnote_to_be_reexecuted": false,
+        "cell_id": "a9036cd1bbbd4f308c863e87e1daa7ae",
+        "deepnote_cell_type": "code"
+      },
+      "outputs": [],
+      "execution_count": 6,
+      "block_group": "8df5d748f9244cdaaaaf1997f8ef8b99"
     },
     {
       "cell_type": "markdown",
@@ -103,11 +184,11 @@
     },
     {
       "cell_type": "code",
-      "source": "training_set = data_train.append(data_validation)\ny = training_set['price_range']\nX = training_set.drop('price_range', axis = 1)\ndata_test= pd.read_csv(\"Tubes2_AI/data/test.csv\")\n\nX_test = data_test.drop('id', axis = 1)\n\nnb = NaiveBayes()\nnb.fit(X, y)\ny_test= nb.predict(X_test)\nsubmission = pd.concat([data_test['id'], pd.DataFrame(y_test, columns = ['price_range'])], axis = 1)\n\nsubmission.to_csv('out2.csv', index = False)\nsubmission",
+      "source": "training_set = data_train.append(data_validation)\ny = training_set['price_range']\nX = training_set.drop('price_range', axis = 1)\ndata_test= pd.read_csv(\"Tubes2_AI/data/test.csv\")\n\nX_test = data_test.drop('id', axis = 1)\n\nnb = NaiveBayes()\nnb.fit(X, y)\ny_test= nb.predict(X_test)\nsubmission = pd.concat([data_test['id'], pd.DataFrame(y_test, columns = ['price_range'])], axis = 1)\n\nsubmission.to_csv('Tubes2_AI/out2.csv', index = False)\nsubmission",
       "metadata": {
-        "source_hash": null,
-        "execution_start": 1701256033831,
-        "execution_millis": 1146,
+        "source_hash": "c6998095",
+        "execution_start": 1701268955648,
+        "execution_millis": 2454,
         "deepnote_to_be_reexecuted": false,
         "cell_id": "a1f7ceb3676a4683ab7e45f4f47863ef",
         "deepnote_cell_type": "code"
@@ -115,7 +196,7 @@
       "outputs": [
         {
           "output_type": "execute_result",
-          "execution_count": 4,
+          "execution_count": 7,
           "data": {
             "application/vnd.deepnote.dataframe.v3+json": {
               "column_count": 2,
@@ -309,89 +390,8 @@
           "metadata": {}
         }
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "block_group": "488018f07f5d4e64abc3a52e0a166730"
-    },
-    {
-      "cell_type": "markdown",
-      "source": "## EXPORT MODEL",
-      "metadata": {
-        "formattedRanges": [],
-        "cell_id": "a4b1672d5f424c03b12c79545eeeb615",
-        "deepnote_cell_type": "text-cell-h2"
-      },
-      "block_group": "0e900d4d145c42d3b59aadf4f5ffaa07"
-    },
-    {
-      "cell_type": "code",
-      "source": "with open('model-naive-bayes-1.pkl', 'wb') as file:\n    pickle.dump(nb, file)",
-      "metadata": {
-        "source_hash": null,
-        "execution_start": 1701256034975,
-        "execution_millis": 641,
-        "deepnote_to_be_reexecuted": false,
-        "cell_id": "901325cd39db42a1811cfc017de5594a",
-        "deepnote_cell_type": "code"
-      },
-      "outputs": [],
-      "execution_count": null,
-      "block_group": "c190741023774a1d949a5ea4fe927ddb"
-    },
-    {
-      "cell_type": "markdown",
-      "source": "## READ MODEL",
-      "metadata": {
-        "formattedRanges": [],
-        "cell_id": "40ff16d391164c4aa573ec65cb86758e",
-        "deepnote_cell_type": "text-cell-h2"
-      },
-      "block_group": "672dc2688a6448d486d768891373aed5"
-    },
-    {
-      "cell_type": "code",
-      "source": "with open('model-naive-bayes-1.pkl', 'rb') as file:\n    loaded_model = pickle.load(file)",
-      "metadata": {
-        "source_hash": null,
-        "execution_start": 1701256035611,
-        "execution_millis": 181,
-        "deepnote_to_be_reexecuted": false,
-        "cell_id": "a9036cd1bbbd4f308c863e87e1daa7ae",
-        "deepnote_cell_type": "code"
-      },
-      "outputs": [],
-      "execution_count": null,
-      "block_group": "9938613598ce4993990b85400165538f"
-    },
-    {
-      "cell_type": "markdown",
-      "source": "## MULTINOMIAL NAIVE BAYES SCIKIT-LEARN",
-      "metadata": {
-        "formattedRanges": [],
-        "cell_id": "8f5d62d3385a428f9e51b3c9ea7ba45e",
-        "deepnote_cell_type": "text-cell-h2"
-      },
-      "block_group": "084741e0eb0d49939fce2d252d78565a"
-    },
-    {
-      "cell_type": "code",
-      "source": "y = data_train['price_range']\nX = data_train.drop('price_range', axis = 1)\nMultinomialNaiveBayesModel = MultinomialNB()\nMultinomialNaiveBayesModel.fit(X, y)\n\ny_true_test = data_validation['price_range']\nX_test = data_validation.drop('price_range', axis = 1)\ny_pred_test = MultinomialNaiveBayesModel.predict(X_test)\naccuracy_score_3 = accuracy_score(y_true_test, y_pred_test)\nprecision_score_3 = precision_score(y_true_test, y_pred_test, average='macro')\nrecall_score_3 = recall_score(y_true_test, y_pred_test, average='macro')\n\nprint(f'Accuracy Score of Multinomial Naive Bayes Algorithm : {accuracy_score_3}')\nprint(f'Precision Score of Multinomial Naive Bayes Algorithm : {precision_score_3}')\nprint(f'Recall Score of Multinomial Naive Bayes Algorithm : {recall_score_3}')",
-      "metadata": {
-        "source_hash": null,
-        "execution_start": 1701256962660,
-        "execution_millis": 9,
-        "deepnote_to_be_reexecuted": false,
-        "cell_id": "76b1ac8e7c1e4f8b898bafa04743c353",
-        "deepnote_cell_type": "code"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "text": "Accuracy Score of Multinomial Naive Bayes Algorithm : 0.5316666666666666\nPrecision Score of Multinomial Naive Bayes Algorithm : 0.5194204225246274\nRecall Score of Multinomial Naive Bayes Algorithm : 0.5323794448063915\n",
-          "output_type": "stream"
-        }
-      ],
-      "execution_count": null,
-      "block_group": "eb9f2240359d476db9665fb687e29ab2"
     },
     {
       "cell_type": "markdown",
